# nsb-toolbox

./: .gitignore  README.md  parser.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  ci.yml
docs/images/: after_format.docx  before_format.docx
nsb_toolbox/: _base_questions.py  assign.py  classes.py  cli.py  db.py  docx_utils.py  importers.py  parser.py  tables.py  yamlparsers.py
nsbtoolbox/: classes.py  cli.py  docx_utils.py  importers.py  parser.py  sciencebowlquestion.py  tables.py  tablewriter.py
nsbutilites/: sciencebowlquestion.py
nsbutilities/: parser.py
tests/: assign.yaml  test_assign.py  test_db.py  test_docx_utils.py  test_importers.py  test_tables.py  test_tablewriter.py  test_yamlparsers.py
tests/test_data/: assign.yaml  convert.yaml  document.xml  table_test.docx  test_LOD.docx  test_TUB.docx  test_assign_config.yaml  test_assign_questions.docx  test_format.docx  test_preprocess.docx  test_question_parser.docx  test_question_parser_linebreak.docx  test_subject.docx  ~$st_preprocess.docx
tests/test_docx/: test.docx  test_preprocess.docx  test_question_parser.docx  test_txt.txt
