[tool.poetry]
name = "nsb-toolbox"
version = "0.6.0"
repository = "https://github.com/rishi-kulkarni/nsbtoolbox"
description = "Utilities for editing Science Bowl questions"
authors = ["Rishi Kulkarni <rishi@kulkarni.science>"]
license = "LICENSE.txt"
readme = "README.md"
packages = [{include = "nsb_toolbox"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"    
]
exclude = ["tests/**/*"]

[tool.poetry.scripts]
nsb = 'nsb_toolbox.cli:main'

[tool.poetry.dependencies]
python = "^3.10.0"
python-docx = "^1.1.0"
pyyaml = "^6.0"
scipy = "^1.15.0"
typing-extensions = "^4.2.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
black = ">=22.12,<25.0"
flake8 = "^6.0.0"
ipython = "^8.8.0"
pytest = "^7.2.1"

[tool.pytest.ini_options]
addopts = "-v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
