[metadata]
name = nsbtoolbox
version = 0.1
url = https://github.com/rishi-kulkarni/nsbtoolbox
author = Rishi Kulkarni
author_email = rishi@kulkarni.science
description = Utilities for editing Science Bowl questions
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE.txt
    

[options]
zip_safe = False
packages = find:
install_requires= 
    python-docx>="0.8.11"
python_requires= >=3.9

[options.entry_points]
console_scripts = nsb = nsbtoolbox.cli:main

[options.packages.find]
exclude = tests